# FancyFinance

./: Makefile  README.md
invoices-mcp/: DATABASE_SETUP.md  README.md  pyproject.toml
invoices-mcp/src/: agent.py  models.py  server.py
langgraph-agent/: langgraph.json  pyproject.toml
langgraph-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
langgraph-agent/agent/: agent.py  tools.py
website/: .gitignore  README.md  requirements.txt  run_dashboard.py  setup.py
website/config/: .env.example  secrets.toml.example
website/data/: IVY Transaction Data - Sheet1.csv
website/scripts/: clean_db.py  create_tables.py  debug_csv.py  setup_chatbot.py  simple_pipeline.py
website/src/: dashboard.py  dlt_pipeline.py  langchain_tools.py
website/tests/: simple_ai_test.py  test_chatbot.py  test_connection.py
website/website/: README.md  index.html
website/website/src/: index.css
website/website/src/components/ui/: button.tsx
website/website/src/pages/: Index.tsx
