[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "langchain-core>=0.3.69",
    "langchain-openai>=0.3.28",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.3",
    "langsmith>=0.4.8",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.3.5",
    "ruff>=0.12.4",
]
